# llm_from_scratch

./: .gitignore  Makefile  README.md  pyproject.toml  pyrightconfig.json  requirements.txt
.github/workflows/: make.yml
llm_from_scratch/: YamlParser.py  attention.py  byte_pair_encoding.py  lexer.py  my_data_loader.py  my_data_set.py  yaml_parser.py
tests/: test_attention.py  test_byte_pair_encoding.py  test_lexer.py  test_torch_dataset_dataloader.py
